# src/internal/api/controllers/questionnaire_controller.py
@@ -1,6 +1,9 @@
 from server_template.models import TemplatebackendCreateQuestionnaireReply
 from server_template.models import TemplatebackendCreateQuestionnaireResult
 from server_template.models import TemplatebackendCreateQuestionnaireRequest
+from server_template.models import TemplatebackendCreateQuestionnaireVersionReply
+from server_template.models import TemplatebackendCreateQuestionnaireVersionResult
+from server_template.models import TemplatebackendCreateQuestionnaireVersionRequest
 from server_template.models import TemplatebackendDeleteQuestionnaireReply
 from server_template.models import TemplatebackendDeleteQuestionnaireResult
 from server_template.models import TemplatebackendGetQuestionnaireReply
@@ -29,6 +32,15 @@ class QuestionnaireController:
         questionnaire.tenantid = user.tenantid
 
         m = self.questionnaire_service.create_questionnaire(questionnaire)
+
+        return TemplatebackendCreateQuestionnaireReply(TemplatebackendCreateQuestionnaireResult(m.id))
+    
+    def questionnaire_service_create_questionnaire_version(self, user, body: TemplatebackendCreateQuestionnaireVersionRequest):
+        version = questionnaire_converter.questionnaire_version_to_business(body.version)
+        # version.userid = user.id
+        # version.tenantid = user.tenantid
+
+        m = self.questionnaire_service.create_questionnaire_version(user, body.id, version)
 
         return TemplatebackendCreateQuestionnaireReply(TemplatebackendCreateQuestionnaireResult(m.id))
 
