# src/internal/api/server_template/models/__init__.py
@@ -16,6 +16,9 @@ from server_template.models.templatebackend_create_hello_reply import Templateba
 from server_template.models.templatebackend_create_questionnaire_reply import TemplatebackendCreateQuestionnaireReply
 from server_template.models.templatebackend_create_questionnaire_request import TemplatebackendCreateQuestionnaireRequest
 from server_template.models.templatebackend_create_questionnaire_result import TemplatebackendCreateQuestionnaireResult
+from server_template.models.templatebackend_create_questionnaire_version_reply import TemplatebackendCreateQuestionnaireVersionReply
+from server_template.models.templatebackend_create_questionnaire_version_request import TemplatebackendCreateQuestionnaireVersionRequest
+from server_template.models.templatebackend_create_questionnaire_version_result import TemplatebackendCreateQuestionnaireVersionResult
 from server_template.models.templatebackend_create_user_reply import TemplatebackendCreateUserReply
 from server_template.models.templatebackend_create_user_result import TemplatebackendCreateUserResult
 from server_template.models.templatebackend_credentials import TemplatebackendCredentials
